--- a/example.html
+++ b/example.html
@@ -5,6 +5,6 @@
     </head>
     <body>
         <p>This is week 05 example of HTML file. 
-          Hi! How are you doing? My name is Peter Chen </p>
+          Hi! How are you doing? My name is Sierra Johnson </p>
     </body>
 <html>
