--- a/index.html
+++ b/index.html
@@ -1,20 +1,23 @@
-<!DOCTYPE html>
+<!DOCTYPE html> 
 <html> 
   <head> 
     <style> 
-      <body> {
-        background-color:FDF9A0
-      } </body>
+      body {
+        background-color: #FDF9A0;
+      }
 
-      <h1> {My name is Sierra Johnson
-        color:BDE8A0
-      } </h1>
+      h1 {
+        color: #BDE8A0;
+      }
 
-      <p> {>I am a web development student. I enjoy coding and solving problems. In my 
-free time, I like to read books and bake muffins
-        color:538C82
-      } </p>
+      p {
+        color: #538C82;
+      }
     </style>
     <title>My Personal Introduction</title> 
   </head>
-</html> 
+  <body>
+    <h1>My name is Sierra Johnson</h1>
+    <p>I am a web development student. I enjoy coding and solving problems. In my free time, I like to read books and bake muffins</p>
+  </body>
+</html>
